# pre-commit-check-filenames

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
check_filenames/: main.py
